Opened 14 years ago
Closed 14 years ago
#7559 closed bug (fixed)
IMAP crash in IMAPInboundProtocol::~IMAPInboundProtocol ()
Reported by: | nielx | Owned by: | czeidler |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
During a normal run the mail_deamon crashes with the message 'called debugger(): looper must be locked before proceeding' with the following stack trace:
#0 0xffff0114 in ?? () #1 0x0024819e in debugger () from /boot/system/lib/libroot.so #2 0x00401cb3 in BLooper::AssertLocked () from /boot/system/lib/libbe.so #3 0x004002b4 in BLooper::RemoveHandler () from /boot/system/lib/libbe.so #4 0x00606ed0 in MailProtocol::RemoveHandler () from /boot/system/lib/libmail.so #5 0x01c7feae in IMAPInboundProtocol::~IMAPInboundProtocol () from /boot/system/add-ons/mail_daemon/inbound_protocols/IMAP #6 0x01c81a58 in IMAPRootInboundProtocol::_ShutdownChilds () from /boot/system/add-ons/mail_daemon/inbound_protocols/IMAP #7 0x01c816b8 in IMAPRootInboundProtocol::Disconnect () from /boot/system/add-ons/mail_daemon/inbound_protocols/IMAP #8 0x01c7f698 in IMAPMailboxThread::_Watch () from /boot/system/add-ons/mail_daemon/inbound_protocols/IMAP #9 0x01c7f2db in watch_mailbox () from /boot/system/add-ons/mail_daemon/inbound_protocols/IMAP #10 0x0024c806 in thread_entry () from /boot/system/lib/libroot.so #11 0x701c5fec in ?? ()
The issue does not occur with every run, so it might be a race condition somewhere. There were no signals that there was anything abnormal about this run. Tested with hrev41550.
Note:
See TracTickets
for help on using tickets.
Should be fixed in hrev41821. The looper destructor has to clean up first...